Fixed display of links to previous/next posts
The vertical spacing was too small.

--- a/_sass/yat/_layout.scss
+++ b/_sass/yat/_layout.scss
@@ -500,7 +500,6 @@ html {
 
   a {
     @include relative-font-size(1.125);
-    line-height: 15px;
     color: #666;
     max-width: 50%;
   }
